--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,11 @@
     <h2 class="h2">Person Details</h2>
 
     <nav>
-      <!-- <a routerLink="customer" class="btn btn-primary active" role="button" routerLinkActive="active">Customers</a> -->
-      <a routerLink="person" class="button" role="button" routerLinkActive="active">All</a>
+      
+      <a routerLink="persons" class="button" role="button" routerLinkActive="active">All</a>
       <a routerLink="search" class="button" role="button" routerLinkActive="active">Search</a>
+      <a routerLink="add" class="button" role="button" routerLinkActive="active">Add</a>
+      
     </nav>
     <router-outlet></router-outlet>
   </div>
