--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -12,6 +12,7 @@
             <td>{{person1.id}}</td>
             <td>{{person1.name}}</td>
             <td>{{person1.mail}}</td>
+            <a routerLink="update/{{person1.id}}" class="button" role="button" routerLinkActive="active">Update</a>
             </tr>
     </tbody>
       </table>
